개인페이지 파이어베이스 추가

--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
           <div id="img-team-k" class="front">
           </div>
           <!-- 뒷면 -->
-          <div class="back" id="img-back-1" onclick="location.href='kim.html'">
-            <p class="fs-3 mt-4">김현철</p>
-            <p class="fs-5 text-start px-4">INFP</p>
+          <div class="back" id="img-back-1" onclick="location.href='team_l.html'">
+            김현철
+            INFP
           </div>
+        
         </div>
       </div>
       <div class="flip">
@@ -59,10 +60,11 @@
           <!-- 앞면 -->
           <div id="img-team-p" class="front"></div>
           <!-- 뒷면 -->
-          <div class="back" id="img-back-2" onclick="location.href='index_soli.html'">
-            <p class="fs-3 mt-4">박솔이</p>
-            <p class="fs-5 text-start px-4">INFJ</p>
+          <div class="back" id="img-back-2" onclick="location.href='team_l.html'">
+            박솔이
+            INFJ
           </div>
+        
         </div>
       </div>
       <div class="flip">
