--- a/kim.html
+++ b/kim.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="kim.css" />
     </head>
     <body>
-        <header>
+        <header class="header">
             <div style="display: flex; justify-content: space-between">
                 <div style="display: flex; align-items: center">
                     <img class="profileImg" />
@@ -19,7 +19,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="display: flex; align-items: center; gap: 15px">
+                <div class="header__icons" style="display: flex; align-items: center; gap: 15px">
                     <img src="./search.svg" width="30" height="30" />
                     <img src="./tel.svg" width="30" height="30" />
                     <img src="./cam.svg" width="30" height="30" />
@@ -45,162 +45,194 @@
                 <img src="./arrow.svg" width="30" height="30" />
             </div>
         </header>
+        <main>
+            <div class="container">
+                <section class="chat">
+                    <div class="chat__main">
+                        <div class="warning hide">
+                            친구로 등록되지 않은 사용자 입니다.<br />
+                            금전 요구등의 메시지를 받을 경우 주의해주세요.
+                        </div>
 
-        <main style="padding: 20px">
-            <div class="warning hide">
-                친구로 등록되지 않은 사용자 입니다.<br />
-                금전 요구등의 메시지를 받을 경우 주의해주세요.
-            </div>
-
-            <div class="massage hide">
-                <img class="profileImg" />
-                <div class="massageContent">
-                    <span class="massageAuthor">김현철</span>
-                    <div class="messageInfo">
-                        <span class="massageBubble">아이엠 그라운드 자기소개 하기!</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="warning hide">SS404 님이 퇴장하셨습니다.</div>
-            <div class="warning hide">양념반탈레반 님이 퇴장하셨습니다.</div>
-            <div class="warning hide">3대500g 님이 퇴장하셨습니다.</div>
-
-            <div class="massage hide">
-                <img class="profileImg" />
-                <div class="massageContent">
-                    <span class="massageAuthor">김현철</span>
-                    <div class="messageInfo">
-                        <span class="massageBubble">..</span>
-                    </div>
-                </div>
-            </div>
-
-            <!--  -->
-            <div class="massage own hide">
-                <div class="massageLeft">
-                    <div class="messageInfo">
-                        <span class="massageBubble">
-                            <div style="display: flex; flex-direction: column; gap: 8px; padding: 10px">
-                                <button
-                                    value="who"
-                                    class="btn-q"
-                                    style="
-                                        cursor: pointer;
-                                        background-color: white;
-                                        font-size: 15px;
-                                        padding: 15px 20px;
-                                        border-radius: 8px;
-                                    "
-                                >
-                                    뭐하는 사람인가요?
-                                </button>
-                                <button
-                                    value="strengths"
-                                    class="btn-q"
-                                    style="
-                                        cursor: pointer;
-                                        background-color: white;
-                                        font-size: 15px;
-                                        padding: 15px 20px;
-                                        border-radius: 8px;
-                                    "
-                                >
-                                    장점은 있나요?
-                                </button>
-                                <button
-                                    value="work-style"
-                                    class="btn-q"
-                                    style="
-                                        cursor: pointer;
-                                        background-color: white;
-                                        font-size: 15px;
-                                        padding: 15px 20px;
-                                        border-radius: 8px;
-                                    "
-                                >
-                                    업무 스타일은?
-                                </button>
-                                <button
-                                    onclick="location.href='./' "
-                                    class="btn-q"
-                                    style="
-                                        cursor: pointer;
-                                        background-color: white;
-                                        font-size: 15px;
-                                        padding: 15px 20px;
-                                        border-radius: 8px;
-                                    "
-                                >
-                                    관심없어요.
-                                </button>
+                        <div class="massage hide">
+                            <img class="profileImg" />
+                            <div class="massageContent">
+                                <span class="massageAuthor">김현철</span>
+                                <div class="messageInfo">
+                                    <span class="massageBubble">아이엠 그라운드 자기소개 하기!</span>
+                                </div>
                             </div>
-                        </span>
-                    </div>
-                </div>
-            </div>
-            <!--  -->
-            <div class="answer">
-                <div class="massage who hide">
-                    <img class="profileImg" />
-                    <div class="massageContent">
-                        <span class="massageAuthor">김현철</span>
-                        <div class="messageInfo">
-                            <span class="massageBubble"
-                                >프로를 지향하는 아마추어의 마음으로 삶을 살고 있는 김현철 이라고 합니다.<br />
-                                아마추어의 마음으로는 프로가 되기 어려울지 모르지만<br />
-                                오랜 기간 동안 끝까지 포기하지 않는 사람들은 어떤 일이든 성공할 가능성이 있다고
-                                생각합니다.<br />
-                                코딩 역시 동작 원리와 이론을 이해하는 것이 중요하지만, 화면을 구현하는 작업을 즐기며
-                                천천히 배우고 있습니다.<br />
-                                성격은 낯을 많이 가리고 부끄러움이 많습니다 발표를 할때 스스로 인정할정도로 완성도가
-                                좋지 않으면 남앞에 보이는게 많이 어렵습니다.<br />
-                                그렇지만 필요에 따라서 부끄러움 많은 사람도 여의치 않으면 시장에서 소리지르면서 물건도
-                                팔게 되더라고요<br />
-                                다 본인 성향대로만 살 수는 없으니까요 ㅠㅠ
-                            </span>
                         </div>
-                    </div>
-                </div>
 
-                <!--  -->
+                        <div class="warning hide">SS404 님이 퇴장하셨습니다.</div>
+                        <div class="warning hide">양념반탈레반 님이 퇴장하셨습니다.</div>
+                        <div class="warning hide">3대500g 님이 퇴장하셨습니다.</div>
 
-                <div class="massage strengths hide">
-                    <img class="profileImg" />
-                    <div class="massageContent">
-                        <span class="massageAuthor">김현철</span>
-                        <div class="messageInfo">
-                            <span class="massageBubble"
-                                >남을 인정하는 데 저항이 적다는 것은 제 장점 중 하나 같습니다.<br />
-                                대부분 어떤 일이든 본인만의 스타일과 습관을 가지며, 그것을 바꾸는 것에 큰 저항감을
-                                가지지만<br />
-                                저는 지위나 나이와 상관 없이 좋아보이는 방식을 발견하면 종종 따라해보곤 합니다.<br />
-                                그리고 저의 제안이 거절당해도 별로 신경 쓰지않습니다.
-                            </span>
+                        <div class="massage hide">
+                            <img class="profileImg" />
+                            <div class="massageContent">
+                                <span class="massageAuthor">김현철</span>
+                                <div class="messageInfo">
+                                    <span class="massageBubble">..</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!--  -->
+                        <div class="massage own hide">
+                            <div class="massageLeft">
+                                <div class="messageInfo">
+                                    <span class="massageBubble">
+                                        <div style="display: flex; flex-direction: column; gap: 8px; padding: 10px">
+                                            <button
+                                                value="who"
+                                                class="btn-q"
+                                                style="
+                                                    cursor: pointer;
+                                                    background-color: white;
+                                                    font-size: 15px;
+                                                    padding: 15px 20px;
+                                                    border-radius: 8px;
+                                                "
+                                            >
+                                                뭐하는 사람인가요?
+                                            </button>
+                                            <button
+                                                value="strengths"
+                                                class="btn-q"
+                                                style="
+                                                    cursor: pointer;
+                                                    background-color: white;
+                                                    font-size: 15px;
+                                                    padding: 15px 20px;
+                                                    border-radius: 8px;
+                                                "
+                                            >
+                                                장점은 있나요?
+                                            </button>
+                                            <button
+                                                value="work-style"
+                                                class="btn-q"
+                                                style="
+                                                    cursor: pointer;
+                                                    background-color: white;
+                                                    font-size: 15px;
+                                                    padding: 15px 20px;
+                                                    border-radius: 8px;
+                                                "
+                                            >
+                                                업무 스타일은?
+                                            </button>
+                                            <button
+                                                onclick="location.href='./' "
+                                                class="btn-q"
+                                                style="
+                                                    cursor: pointer;
+                                                    background-color: white;
+                                                    font-size: 15px;
+                                                    padding: 15px 20px;
+                                                    border-radius: 8px;
+                                                "
+                                            >
+                                                관심없어요.
+                                            </button>
+                                        </div>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <!--  -->
+                        <div class="answer">
+                            <div class="massage who hide">
+                                <img class="profileImg" />
+                                <div class="massageContent">
+                                    <span class="massageAuthor">김현철</span>
+                                    <div class="messageInfo">
+                                        <span class="massageBubble"
+                                            >프로를 지향하는 아마추어의 마음으로 삶을 살고 있는 김현철 이라고 합니다.<br />
+                                            아마추어의 마음으로는 프로가 되기 어려울지 모르지만<br />
+                                            오랜 기간 동안 끝까지 포기하지 않는 사람들은 어떤 일이든 성공할 가능성이
+                                            있다고 생각합니다.<br />
+                                            코딩 역시 동작 원리와 이론을 이해하는 것이 중요하지만, 화면을 구현하는
+                                            작업을 즐기며 천천히 배우고 있습니다.<br />
+                                            성격은 낯을 많이 가리고 부끄러움이 많습니다 발표를 할때 스스로 인정할정도로
+                                            완성도가 좋지 않으면 남앞에 보이는게 많이 어렵습니다.<br />
+                                            그렇지만 필요에 따라서 부끄러움 많은 사람도 여의치 않으면 시장에서
+                                            소리지르면서 물건도 팔게 되더라고요<br />
+                                            다 본인 성향대로만 살 수는 없으니까요 ㅠㅠ
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!--  -->
+
+                            <div class="massage strengths hide">
+                                <img class="profileImg" />
+                                <div class="massageContent">
+                                    <span class="massageAuthor">김현철</span>
+                                    <div class="messageInfo">
+                                        <span class="massageBubble"
+                                            >남을 인정하는 데 저항이 적다는 것은 제 장점 중 하나 같습니다.<br />
+                                            대부분 어떤 일이든 본인만의 스타일과 습관을 가지며, 그것을 바꾸는 것에 큰
+                                            저항감을 가지지만<br />
+                                            저는 지위나 나이와 상관 없이 좋아보이는 방식을 발견하면 종종 따라해보곤
+                                            합니다.<br />
+                                            그리고 저의 제안이 거절당해도 별로 신경 쓰지않습니다.
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--  -->
+                            <div class="massage work-style hide">
+                                <img class="profileImg" />
+                                <div class="massageContent">
+                                    <span class="massageAuthor">김현철</span>
+                                    <div class="messageInfo">
+                                        <span class="massageBubble">
+                                            용두사미라고 하면 적합할 것 같습니다.<br />
+                                            아이디어가 떠올랐을때 엄청나게 불타오르지만 항상 디테일과 마무리에서
+                                            어려움을 많이 느낍니다.<br />
+                                            협업시엔 서로의 생각을 확인하는 것을 가장 중요하게 생각합니다.<br />
+                                            군대에서 복명복창을 하는 것처럼 말 한마디도 똑바로 알아들었는지 확인하기
+                                            어려운데<br />
+                                            추상적인 아이디어의 경우 잘못전달되어 그릇될 가능성이 크기에 <br />
+                                            협업 시 팀원간 공통된 목표와 그것을 잘 이해하고 있는지를 가장 중요하게
+                                            여기는 편입니다.
+                                            <br />
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <!--  -->
-                <div class="massage work-style hide">
-                    <img class="profileImg" />
-                    <div class="massageContent">
-                        <span class="massageAuthor">김현철</span>
-                        <div class="messageInfo">
-                            <span class="massageBubble">
-                                용두사미라고 하면 적합할 것 같습니다.<br />
-                                아이디어가 떠올랐을때 엄청나게 불타오르지만 항상 디테일과 마무리에서 어려움을 많이
-                                느낍니다.<br />
-                                협업시엔 서로의 생각을 확인하는 것을 가장 중요하게 생각합니다.<br />
-                                군대에서 복명복창을 하는 것처럼 말 한마디도 똑바로 알아들었는지 확인하기 어려운데<br />
-                                추상적인 아이디어의 경우 잘못전달되어 그릇될 가능성이 크기에 <br />
-                                협업 시 팀원간 공통된 목표와 그것을 잘 이해하고 있는지를 가장 중요하게 여기는 편입니다.
-                                <br />
-                            </span>
-                        </div>
-                    </div>
-                </div>
+                </section>
+
+                <aside class="toggleHistory">
+                    <img src="secrets.svg" width="30" height="30" alt="transform-nav" />
+                </aside>
+
+                <section id="history">
+                    <div class="history__chat"></div>
+                    <form
+                        class="history__form"
+                        style="
+                            display: flex;
+                            position: sticky;
+                            bottom: 0;
+                            left: 0;
+                            background-color: white;
+                            width: 100%;
+                            height: 50px;
+                            padding: 0px 100px;
+                        "
+                    >
+                        <input class="history__input" style="flex: 1" />
+                        <button>전송</button>
+                    </form>
+                </section>
             </div>
         </main>
-        <script src="kim.js"></script>
+        <script type="module" src="kim.js"></script>
     </body>
 </html>
