--- a/index_soli.html
+++ b/index_soli.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style_soli.css">
+    <link rel="stylesheet" href="style_Soli.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -68,7 +68,7 @@
         });
 
         $(".delete-btn").click(async function () {
-            let id = $(this).closest('.card').attr('id'); ;
+            let id = $(".card").attr("id");
             await deleteDoc(doc(db, "comments", id));
             alert('삭제 완료!');
             window.location.reload();
